@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.2.28
+ * @version 0.2.31
  */
 @import "wcom-05-constants";
 body {
@@ -70,7 +70,7 @@ body {
     }
     table:not(.object-view, .preference-columns) {
         border-collapse: collapse; margin: 0.25rem auto 0.5rem;
-        position: relative;
+        min-width: 15rem; position: relative;
         tr {
             line-height: 1.5rem;
             &.even {
@@ -122,6 +122,9 @@ body {
             font-size: @data-font-size; font-weight: @data-font-weight;
             &.boolean, &.checkbox, &:has(svg.icon) {
                 text-align: center;
+            }
+            &.checkbox {
+                width: 1rem;
             }
             &.datetime {
                 text-align: right; white-space: nowrap;
@@ -256,7 +259,7 @@ body {
         }
     }
     .dialog-close {
-        background: var(--button-bg); border-radius: 3px;
+        background: var(--btn-bg); border-radius: 3px;
         box-shadow: 2px 2px 2px @panel-shadow; color: @text-close;
         cursor: pointer; font-family: #fonts[sans];
         font-size: @system-font-size; font-weight: bold;
@@ -303,7 +306,7 @@ body {
                 z-index: 1;
             }
             &::after {
-                background: var(--button-bg);
+                background: var(--btn-bg);
                 border: 2px inset @btn-border; border-radius: 10px;
                 content: ''; display: block; position: absolute;
                 height: @checkbox-height; left: 0.5rem; top: 0.25rem;
@@ -334,7 +337,7 @@ body {
             margin: 0 0.25rem 0 0; position: relative; top: 2px;
         }
         select {
-            background: var(--button-bg); border-radius: 5px;
+            background: var(--btn-bg); border-radius: 5px;
             font-family: #fonts[serif]; font-size: @dialog-font-size;
             font-weight: @data-font-weight;
             option {
@@ -444,7 +447,7 @@ body {
             align-items: stretch; display: flex; height: 1.75rem;
             &:hover {
                 .search-display {
-                    background: var(--button-bg);
+                    background: var(--btn-bg);
                 }
                 .search-field {
                     max-width: 20rem; padding: 0 0.25rem;
@@ -452,7 +455,7 @@ body {
             }
             &:has(.search-field:focus) .search-display,
             &:has(.search-field:not(:placeholder-shown)) .search-display {
-                background: var(--button-bg);
+                background: var(--btn-bg);
             }
             .search-field {
                 color: inherit; border: none; border-radius: 0 2px 2px 0;
@@ -482,7 +485,7 @@ body {
                     right: 4px; top: 9px; width: 0;
                 }
                 .search-display {
-                    background: var(--button-bg-disabled);
+                    background: var(--btn-bg-disabled);
                     border: 2px outset @btn-border;
                     border-radius: 50px 0 0 50px; color: @text-watermark;
                     display: inline-block; font-family: #fonts[sans];
@@ -507,9 +510,6 @@ body {
                 }
             }
         }
-    }
-    .search-messages:empty {
-        display: none;
     }
     .section-row {
         background: @row-bg-inactive; font-family: #fonts[sans];
@@ -537,6 +537,9 @@ body {
         color: @text-dark; font-family: #fonts[sans];
         font-size: @system-font-size; padding: 0.25rem 0.5rem;
         text-align: center;
+        &:empty {
+            display: none;
+        }
         a {
             color: @text-link; cursor: pointer; margin-left: 0.5rem;
             &:hover {
@@ -552,16 +555,16 @@ body {
         padding-bottom: 0.75rem;
     }
     .table-form .table-button, .table-form button, .dialog-form button {
-        background: var(--button-bg); border: 2px outset @btn-border;
+        background: var(--btn-bg); border: 2px outset @btn-border;
         border-radius: 50px; color: @text-link; cursor: pointer;
         display: inline-block; overflow: hidden; position: relative;
         text-decoration: none; transition: border 0.5s, color 0.5s;
         &::after {
-            background: var(--button-bg); border-radius: 50px; content: '';
+            background: var(--btn-bg); border-radius: 50px; content: '';
             inset: 3px; position: absolute; z-index: 2;
         }
         &::before {
-            background: var(--button-bg-highlight); content: ''; display: block;
+            background: var(--btn-bg-highlight); content: ''; display: block;
             height: 3rem; left: var(--x); opacity: 0; position: absolute;
             top: var(--y); transform: translate(-50%, -50%);
             transition: opacity 0.5s; width: 3rem; z-index: 1;
@@ -599,7 +602,7 @@ body {
     .table-form button[disabled=disabled]::after,
     .dialog-form button[disabled=disabled],
     .dialog-form button[disabled=disabled]::after {
-        background: var(--button-bg-disabled);
+        background: var(--btn-bg-disabled);
     }
     .top-left-control, .top-right-control {
         align-items: baseline; display: inline-flex; gap: 0.5rem;
